--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/icone.jpg?v=2" />
+    <link rel="icon" type="image/jpg" href="/icone.png?v=2" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CONX Academy</title>
     <meta name="description" content="Plataforma de treinamento CONX Academy." />
@@ -11,11 +11,11 @@
     <meta property="og:title" content="CONX Academy" />
     <meta property="og:description" content="Plataforma de treinamento CONX Academy." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/icone.jpg" />
+    <meta property="og:image" content="/icone.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="/icone.jpg" />
+    <meta name="twitter:image" content="/icone.png" />
   </head>
 
   <body>
