--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpg" href="/icone.png?v=2" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CONX Academy</title>
-    <meta name="description" content="Plataforma de treinamento CONX Academy." />
+    <title>CONX Vendas Academy</title>
+    <meta name="description" content="Plataforma de treinamento CONX VendasAcademy." />
     <meta name="author" content="Conx" />
 
-    <meta property="og:title" content="CONX Academy" />
-    <meta property="og:description" content="Plataforma de treinamento CONX Academy." />
+    <meta property="og:title" content="CONX Vendas Academy" />
+    <meta property="og:description" content="Plataforma de treinamento CONX VendasAcademy." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/icone.png" />
 
