--- a/index.html
+++ b/index.html
@@ -2,20 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/icone.png?v=2" />
+    <link rel="icon" type="image/png" href="/IconeApp.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CONX Vendas Academy</title>
     <meta name="description" content="Plataforma de treinamento CONX VendasAcademy." />
     <meta name="author" content="Conx" />
 
+    <meta name="theme-color" content="#000000" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="Conx Academy" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <link rel="apple-touch-icon" href="/IconeApp.png" />
+
     <meta property="og:title" content="CONX Vendas Academy" />
     <meta property="og:description" content="Plataforma de treinamento CONX VendasAcademy." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/icone.png" />
+    <meta property="og:image" content="/IconeApp.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="/icone.png" />
+    <meta name="twitter:image" content="/IconeApp.png" />
   </head>
 
   <body>
